--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "verbum_exploratio"
-version = "0.0.5"
+version = "0.0.6"
 authors = [
   { name="Chris Lee", email="python@chrisleephd.us" },
 ]
@@ -19,7 +19,8 @@ classifiers = [
 dependencies = [
     "wxPython==4.2.1",
     "lxml==5.2.2",
-    "requests==2.32.3"
+    "requests==2.32.3",
+    "spacy==3.7.5"
 ]
 
 [project.urls]
