--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "verbum_exploratio"
-version = "0.0.7"
+version = "0.0.8"
 authors = [
   { name="Chris Lee", email="python@chrisleephd.us" },
 ]
@@ -20,7 +20,9 @@ dependencies = [
     "wxPython==4.2.1",
     "lxml==5.2.2",
     "requests==2.32.3",
-    "spacy==3.7.5"
+    "spacy==3.7.5",
+    "matplotlib==3.9.0",
+    "networkx==3.3"
 ]
 
 [project.urls]
