--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,12 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.sdist]
+exclude = [ ".conda" ]
+
 [project]
 name = "verbum_exploratio"
-version = "0.0.8"
+version = "0.0.9"
 authors = [
   { name="Chris Lee", email="python@chrisleephd.us" },
 ]
