--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ exclude = [ ".conda" ]
 
 [project]
 name = "verbum_exploratio"
-version = "0.0.9"
+version = "0.0.10"
 authors = [
   { name="Chris Lee", email="python@chrisleephd.us" },
 ]
@@ -20,12 +20,12 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "wxPython==4.2.1",
-    "lxml==5.2.2",
-    "requests==2.32.3",
-    "spacy==3.7.5",
-    "matplotlib==3.9.0",
-    "networkx==3.3"
+    "wxPython>=4.2",
+    "lxml>=5.2",
+    "requests>=2.32",
+    "spacy>=3.7",
+    "matplotlib>=3.9",
+    "networkx>=3.3"
 ]
 
 [project.urls]
